update some overflow issues

--- a/styles/main.css
+++ b/styles/main.css
@@ -4,11 +4,13 @@
 }
 
 /* remove the clipping and add padding between titles */
-#asana_sidebar .SidebarTeamMembershipHeader-teamName {
+#asana_sidebar .SidebarTeamMembershipHeader-teamName, .SidebarItemRow-name {
     text-overflow: unset;
     white-space: unset;
 }
-
+.SidebarItemRow-name{
+    line-height: 120%;
+}
 #asana_sidebar .DropTargetRow:not(.DropTargetRow--inSpreadsheetGrid) {
     margin-bottom: 0;
     padding: 1px 0;
